Make tables full-width on mobile, fix weird internal borders
Apparently tables inside of tables are thing, too...

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -752,11 +752,6 @@ body :not( :checked ) > .toctogglespan:after {
 		border: 1px solid @base70;
 		padding: 0.4em 0.5em;
 	}
-
-	> tr > th,
-	> * > tr > th {
-		border-bottom-width: 2px;
-	}
 }
 
 .mw-datatable th {
